# TensorSharp

./: .gitignore  LICENSE  README.md  README_zh-cn.md  TensorSharp.slnx  readme_cn.md
AdvUtils/: AdvUtils.csproj  Logger.cs
InferenceConsole/: InferenceConsole.csproj  Program.cs
InferenceConsole/testdata/: batch_thinking.jsonl  example_api_thinking_tools.md  input_tool_calc.txt  tools_calculator.json
InferenceEngine/: BpeTokenizer.cs  ChatTemplate.cs  GgufReader.cs  Half.cs  InferenceEngine.csproj  Jinja2Template.cs  ManagedQuantizedOps.cs  MediaHelper.cs  ModelBase.cs  NativeDequant.cs  OutputParser.cs  SamplingConfig.cs  SentencePieceTokenizer.cs  StructuredOutputs.cs  TokenSampler.cs
InferenceWeb/: API_EXAMPLES.md  BackendCatalog.cs  InferenceQueue.cs  InferenceWeb.csproj  ModelService.cs  OpenAIResponseFormatParser.cs  Program.cs  WebUiChatPolicy.cs  test_requests.jsonl
InferenceWeb.Tests/: BackendCatalogTests.cs  ChatSessionTests.cs  FileLoggerProviderTests.cs  GlobalUsings.cs  ImageProcessorTests.cs  InferenceWeb.Tests.csproj  KVCacheMultiTurnIntegrationTests.cs  KVCachePromptRendererTests.cs  KVCacheTests.cs  ManagedQuantizedOpsTests.cs  MediaHelperTests.cs  ModelContextLengthTests.cs  ModelServiceHistoryTests.cs  ModelServiceKVCacheTests.cs  ModelServiceSessionTests.cs  ModelServiceUploadLoggingTests.cs  PrefillOptimizationBenchmark.cs  RequestLoggingMiddlewareTests.cs  SamplingConfigCloneTests.cs  SamplingConfigParserTests.cs  ServerOptionsBuilderTests.cs  SessionManagerTests.cs  StructuredOutputTests.cs  TextUploadHelperTests.cs  WebUiChatPolicyTests.cs
InferenceWeb/testdata/: README.md  test_multiturn.py  test_multiturn.sh
InferenceWeb/wwwroot/: index.html
TensorSharp/: Half.cs  IBasicOps.cs  OpRegistryAttributes.cs  Ops.cs  RandomGenerator.cs  ReflectionExtensions.cs  Storage.cs  Tensor.cs  TensorApplyCPU.cs  TensorDimIterState.cs  TensorFormatting.cs  TensorIterState.cs  TensorSerialization.cs  TensorSharp.csproj
TensorSharp.Backends.GGML/: GgmlBasicOps.cs  GgmlContext.cs  GgmlGgufTensorDequant.cs  GgmlMemoryPool.cs  GgmlNative.cs  GgmlStorage.cs  TensorSharp.Backends.GGML.csproj
TensorSharp.Cli/: GlobalUsings.cs  InteractiveSession.cs  Program.cs  TensorSharp.Cli.csproj  test_requests.jsonl
TensorSharp.Cli/Logging/: CliLoggingSetup.cs
TensorSharp.Cli/testdata/: input_thinking.txt  (+6 more)
TensorSharp.Core/: DType.cs  Half.cs  IAllocator.cs  OpConstraint.cs  OpRegistry.cs  Ops.cs  RefCounted.cs  TensorDimensionHelpers.cs  TensorSharp.Core.csproj
TensorSharp.GGML/: GgmlAllocator.cs  GgmlBasicOps.cs  GgmlGgufTensorDequant.cs  GgmlLossOps.cs  GgmlMemoryPool.cs  GgmlNative.cs  GgmlStorage.cs  TensorSharp.GGML.csproj
TensorSharp.GGML.Native/: CMakeLists.txt  build-linux.sh  ggml_ops.cpp  ggml_ops_core.cpp  ggml_ops_elementwise.cpp  ggml_ops_fused.cpp  ggml_ops_gated_delta_net.cpp  ggml_ops_internal.h  ggml_ops_matmul.cpp  ggml_ops_norm_attn.cpp  ggml_ops_training.cpp  ggml_ops_transformer.cpp
TensorSharp.GGML.Native/tests/: addmm_vector_test.cpp  get_rows_quant_test.cpp
TensorSharp.GGML.Native/tests/GgmlManagedSmoke/: GgmlManagedSmoke.csproj  Program.cs
TensorSharp.GGML.Native/tests/InferenceEngineSmoke/: InferenceEngineSmoke.csproj  Program.cs
TensorSharp.Models/: BackendExecutionPlan.cs  GlobalUsings.cs  Half.cs  ManagedQuantizedOps.cs  MediaHelper.cs  ModelBase.cs  ModelMultimodalInjector.cs  Modelfile.fp16  NativeDequant.cs  TensorSharp.Models.csproj
TensorSharp.Runtime/: BpeTokenizer.cs  ChatTemplate.cs  ConsoleBanner.cs  Contracts.cs  DefaultKvCachePolicy.cs  GgufReader.cs  Jinja2Template.cs  KVCache.cs  KVCachePromptRenderer.cs  ModelPrimitives.cs  OutputParser.cs  PromptRenderer.cs  SamplingConfig.cs  SentencePieceTokenizer.cs  StructuredOutputs.cs  TensorSharp.Runtime.csproj  TokenSampler.cs
TensorSharp.Server/: API_EXAMPLES.md  API_EXAMPLES_zh-cn.md  BackendCatalog.cs  ChatSession.cs  InferenceQueue.cs  ModelService.cs  OpenAIResponseFormatParser.cs  Program.cs  SessionManager.cs  TensorSharp.Server.csproj  TextUploadHelper.cs  WebUiChatPolicy.cs
docs/: model_cards.md  model_cards_cn.md
(+101 files in other folders)
